2000-09-25  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* tests/semantics.m4 (AC_PROG_CPP with warning): Simplified.

2000-09-25  Pavel Roskin  <proski@gnu.org>

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): use
	_AC_INIT_PREPARE_ENVIRONMENT to make the shell running
	config.status sane and POSIX-compatible.
	* configure: Regenerate.

2000-09-25  Pavel Roskin  <proski@gnu.org>

	* autoheader.sh: Don't check status of variable assignments -
	* it's undefined in ash 0.2.
	* autoreconf.sh: Likewise.
	* autoupdate.sh: Likewise.
	* autoconf.sh: Likewise. Also eliminated command substitution
	inside variable expansion - ash 0.2 coredumps on it.

2000-09-21  Pavel Roskin  <proski@gnu.org>

	* tests/atspecific.m4 (_AT_CHECK_AC_MACRO): Check stderr from
	autoconf and autoheader. Expected warnings disabled by "-W none"
	Preceding comment removed as no longer relevant.
	* tests/semantics.m4 (AC_CHECK_PROG & AC_PATH_PROG): Check
	stderr from autoconf.
	(AC_PATH_PROG & AC_PATH_PROGS): Likewise.
	(AC_CONFIG_FILES, HEADERS, LINKS and COMMANDS): Likewise.
	* tests/tools.m4 (autoheader): Check that autoheader prints
	a warning for missing templates. Check stderr from autoconf.
	* tests/torture.m4 (config.status under extreme conditions):
	Check stderr from autoconf and autoheader.
	(command line interface): Check stderr from autoconf.

2000-09-21  Pavel Roskin  <proski@gnu.org>

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): Fix usage info for
	config.status - file arguments are optional.

2000-09-21  Pavel Roskin  <proski@gnu.org>

	* acgeneral.m4 (_AC_OUTPUT_FILES): Ensure that config.status
	exits if any input file is missing.
	* tests/semantics.m4 (missing templates): Test it.

2000-09-21  Pavel Roskin  <proski@gnu.org>

	* acgeneral.m4 (_AC_SHELL_TMPDIR): Don't check status of variable
	assignment - it's undefined in ash 0.2.

2000-09-21  Akim Demaille  <akim@epita.fr>

	* src/atgeneral.m4 (AC_CHECK): Display stderr including when the
	test failed because of stdout.
